[package]
name = "fil_actor_multisig_v9"
description = "Builtin multisig actor for Filecoin"
version = "1.0.0"
license = "MIT OR Apache-2.0"
authors = [
  "ChainSafe Systems <info@chainsafe.io>",
  "Protocol Labs",
  "Filecoin Core Devs",
]
edition = "2018"
repository = "https://github.com/ChainSafe/fil-actor-states"
keywords = ["filecoin", "web3", "wasm"]

[dependencies]
cid = { workspace = true }
fil_actors_runtime_v9 = { workspace = true }
frc42_dispatch = { workspace = true }
fvm_ipld_blockstore = { workspace = true }
fvm_ipld_encoding = { workspace = true }
fvm_ipld_hamt = { workspace = true }
fvm_shared = { workspace = true }
indexmap = { workspace = true }
integer-encoding = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
serde = { workspace = true }
