[package]
name = "fil_actor_paych_v10"
description = "Builtin paych actor for Filecoin"
version = "10.0.0-alpha.1"
license = "MIT OR Apache-2.0"
authors = [
  "ChainSafe Systems <info@chainsafe.io>",
  "Protocol Labs",
  "Filecoin Core Devs",
]
edition = "2018"
repository = "https://github.com/ChainSafe/fil-actor-states"
keywords = ["filecoin", "web3", "wasm"]

[dependencies]
fil_actors_runtime_v10 = { workspace = true }
frc42_dispatch = "3.0.0"
fvm_shared = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
cid = { workspace = true }
fvm_ipld_blockstore = { workspace = true }
fvm_ipld_encoding = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }

[dev-dependencies]
fil_actors_runtime_v10 = { workspace = true }
fvm_ipld_amt = { version = "0.5.1", features = ["go-interop"] }
derive_builder = "0.10.2"
