[package]
name = "fil_actor_paych_v10"
description = "Builtin paych actor for Filecoin"
version = "10.0.0-alpha.1"
license = "MIT OR Apache-2.0"
authors = [
  "ChainSafe Systems <info@chainsafe.io>",
  "Protocol Labs",
  "Filecoin Core Devs",
]
edition = "2018"
repository = "https://github.com/ChainSafe/fil-actor-states"
keywords = ["filecoin", "web3", "wasm"]

[dependencies]
cid = { workspace = true }
fil_actors_runtime_v10 = { workspace = true }
frc42_dispatch = { workspace = true }
fvm_ipld_encoding = { workspace = true }
fvm_shared = { version = "3", default-features = false }
num-derive = { workspace = true }
num-traits = { workspace = true }
serde = { workspace = true }
