[package]
name = "fil_actor_power_v10"
description = "Builtin power actor for Filecoin"
version = "10.0.0-alpha.1"
license = "MIT OR Apache-2.0"
authors = [
  "ChainSafe Systems <info@chainsafe.io>",
  "Protocol Labs",
  "Filecoin Core Devs",
]
edition = "2018"
repository = "https://github.com/ChainSafe/forest"
keywords = ["filecoin", "web3", "wasm"]

[dependencies]
fil_actors_runtime_v10 = { workspace = true }
frc42_dispatch = { workspace = true }
fvm_shared = { workspace = true }
fvm_ipld_hamt         = { workspace = true }
num-derive            = { workspace = true }
num-traits            = { workspace = true }
indexmap = { workspace = true }
cid                   = { workspace = true }
integer-encoding      = { workspace = true }
lazy_static           = { workspace = true }
log                   = { workspace = true }
serde                 = { workspace = true }
anyhow                = { workspace = true }
fvm_ipld_blockstore   = { workspace = true }
fvm_ipld_encoding     = { workspace = true }
