[package]
name = "fil_actor_power_v11"
description = "Builtin power actor for Filecoin"
version = "1.0.0"
license = "MIT OR Apache-2.0"
authors = [
  "ChainSafe Systems <info@chainsafe.io>",
  "Protocol Labs",
  "Filecoin Core Devs",
]
edition = "2021"
repository = "https://github.com/ChainSafe/fil-actor-states"
keywords = ["filecoin", "web3", "wasm"]

[dependencies]
anyhow = { workspace = true }
cid = { workspace = true }
fil_actors_runtime_v11 = { workspace = true }
frc42_dispatch = { workspace = true }
fvm_ipld_blockstore = { workspace = true }
fvm_ipld_encoding = { workspace = true }
fvm_ipld_hamt = { workspace = true }
fvm_shared3 = { workspace = true }
integer-encoding = { workspace = true }
lazy_static = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
serde = { workspace = true }
