[package]
name = "fil_actors_runtime_v10"
description = "System actors for the Filecoin protocol"
version = "10.0.0-alpha.1"
license = "MIT OR Apache-2.0"
authors = [
  "ChainSafe Systems <info@chainsafe.io>",
  "Protocol Labs",
  "Filecoin Core Devs",
]
edition = "2021"
repository = "https://github.com/ChainSafe/fil-actor-states"

[dependencies]
fvm_ipld_hamt = "0.6.1"
fvm_ipld_amt = { version = "0.5.1" }
fvm_ipld_encoding.workspace = true
fvm_shared = { version = "2.0.0-alpha.2", default-features = false }
num-traits = "0.2.14"
num-derive = "0.3.3"
serde = { version = "1.0.136", features = ["derive"] }
lazy_static = { version = "1.4.0", optional = true }
unsigned-varint = "0.7.1"
byteorder = "1.4.3"
cid = { version = "0.8.3", default-features = false, features = [
  "serde-codec",
] }
thiserror = "1.0.30"
# enforce wasm compat
getrandom = { version = "0.2.5" }
hex = { version = "0.4.3", optional = true }
anyhow = "1.0.65"
blake2b_simd = "1.0"
fvm_ipld_blockstore = "0.1.1"
multihash = { version = "0.16.1", default-features = false }
rand = "0.8.5"
serde_repr = "0.1.8"
regex = "1"
itertools = "0.10"
paste = "1.0.9"
castaway = "0.2.2"

[dependencies.sha2]
version = "0.10"

[dev-dependencies]
derive_builder = "0.10.2"
hex = "0.4.3"

[features]
test_utils = ["hex", "multihash/sha2", "lazy_static"]
