[package]
name = "fil_actors_runtime_v10"
description = "System actors for the Filecoin protocol"
version = "10.0.0-alpha.1"
license = "MIT OR Apache-2.0"
authors = [
  "ChainSafe Systems <info@chainsafe.io>",
  "Protocol Labs",
  "Filecoin Core Devs",
]
edition = "2021"
repository = "https://github.com/ChainSafe/fil-actor-states"

[dependencies]
byteorder = "1.4.3"
cid = { version = "0.8.3", default-features = false, features = [
  "serde-codec",
] }
fvm_ipld_amt = { version = "0.5.1" }
fvm_ipld_encoding.workspace = true
fvm_ipld_hamt = "0.6.1"
fvm_shared = { version = "2.0.0-alpha.2", default-features = false }
lazy_static = { version = "1.4.0", optional = true }
num-derive = "0.3.3"
num-traits = "0.2.14"
serde = { version = "1.0.136", features = ["derive"] }
thiserror = "1.0.30"
unsigned-varint = "0.7.1"
# enforce wasm compat
anyhow = "1.0.65"
blake2b_simd = "1.0"
castaway = "0.2.2"
fvm_ipld_blockstore = "0.1.1"
getrandom = { version = "0.2.5" }
hex = { version = "0.4.3", optional = true }
itertools = "0.10"
multihash = { version = "0.16.1", default-features = false }
num-bigint.workspace = true
paste = "1.0.9"
quickcheck = { workspace = true, optional = true }
rand = "0.8.5"
regex = "1"
serde_repr.workspace = true
sha2.workspace = true

[dev-dependencies]
fil_actors_runtime_v10 = { path = ".", features = ["arb"] }
hex.workspace = true
quickcheck_macros.workspace = true
toml = "0.7"

[features]
test_utils = ["hex", "multihash/sha2", "lazy_static"]
arb = ["quickcheck"]
