[package]
name = "fil_actors_runtime_v10"
description = "System actors for the Filecoin protocol"
version = "1.0.0"
license = "MIT OR Apache-2.0"
authors = [
  "ChainSafe Systems <info@chainsafe.io>",
  "Protocol Labs",
  "Filecoin Core Devs",
]
edition = "2021"
repository = "https://github.com/ChainSafe/fil-actor-states"

[dependencies]
anyhow = { workspace = true }
cid = { workspace = true }
fvm_ipld_amt = { workspace = true }
fvm_ipld_blockstore = { workspace = true }
fvm_ipld_encoding = { workspace = true }
fvm_ipld_hamt = { workspace = true }
fvm_shared3 = { workspace = true }
multihash = { workspace = true }
num-bigint = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
paste = { workspace = true }
quickcheck = { workspace = true, optional = true }
serde = { workspace = true }
serde_repr = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
unsigned-varint = { workspace = true }

[dev-dependencies]
quickcheck_macros = { workspace = true }
toml = { workspace = true }

[features]
arb = ["quickcheck"]
